# jaseci

./: .flake8  .gitignore  .gitignore.swp  .pre-commit-config.yaml  =2.4.0  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  CONTRIBUTORS.md  NOTES.md  QUICK_START.md  README.md  README.md.dump  README.new.md  SUMMARY.md  VERSION  action_level_test.sh  app.py  apple.pickle  assignment.jac  cc.jac  cfg.gv  cfg.py  cobol.txt  comparison.py  connect_expressions.dot  demo.jac  dialogue.jac  diff.txt  dump.rdb  faq.jac  fstrparser.out  gendocs.py  generateDocs.py  grep  install_everything.sh  jac_import_tree_ideal.out  js.session  main.jac  main.jir  (+48 more)
jac/: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG  MUSTDOS.txt  cfg.gv  error  example.jac  main.py  myfile.txt  mypy.ini  out  pyproject.toml  pytest.ini  test-tracer.py  test.jac  test.py  test123.jac
jac-cloud/: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  filebeat.yml  mypy.ini  pyproject.toml  setup.py
jac-cloud/.github/workflows/: pre_commit.yml  release.yml  run_plugin_pytest.yml
jac-cloud/docs/: Environment-Variables.md  Jaseci.md  Logger.md
jac-cloud/jac_cloud/: __init__.py  runner.py  standalone.py
jac-cloud/jac_cloud/core/: __init__.py  archetype.py  architype.py  context.py  memory.py
jac-cloud/jac_cloud/jaseci/: __init__.py  main.py
jac-cloud/jac_cloud/plugin/: __init__.py  cli.py  jaseci.py
jac-cloud/jac_cloud/tests/: __init__.py  jac-cloud-websocket.insomnia  localhost.crt  localhost.key  openapi_specs.json  openapi_specs.yaml  openapi_specs_mini.json  openapi_specs_mini.yaml  runner.py  simple.json  simple_graph.jac  simple_graph_mini.jac  situational_flows.jac  spawn_call.jac  test.json  test_simple_graph.py  test_simple_graph_mini.py  test_situational_flows.py  test_ssl_service.py  test_util.py  test_utils.py  websocket.jac
jac-cloud/jaclang_jaseci/core/: architype.py  context.py
jac-cloud/jaclang_jaseci/jaseci/: __init__.py
jac-cloud/jaclang_jaseci/plugin/: __init__.py  cli.py
jac-cloud/jaclang_jaseci/tests/: simple_graph.jac  test_simple_graph.py
jac-cloud/scripts/: Dockerfile  filebeat-template.yml  init_jac_cloud.sh  jac-cloud.yml  module-config.yml  pod-manager.yml  v1-to-v2.js
jac-module-proxy/: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
jac-module-proxy/jac_module_proxy/: __init__.py
jac-module-proxy/jac_module_proxy/grpc_local/: module_service.proto
jac-module-proxy/jac_module_proxy/plugin/: __init__.py
jac-mtllm/: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
jac-mtllm/.devcontainer/: devcontainer.json
jac-mtllm/.github/workflows/: release.yml  test.yml
jac-mtllm/docs/: README.md
jac-mtllm/docs/.codedoc/: config.ts  package-lock.json  theme.ts
jac-mtllm/docs/docs/: Dockerfile  docker-compose.yml
jac-mtllm/examples/: debate_agent.jac  essay_review.jac  expert_answer.jac  gemini_test.jac  grammar_checker.jac  inherit_basellm.jac  joke_gen.jac  marketing_agency.jac  odd_word_out.jac  personality_finder.jac  text_to_type.jac  translator.jac  wikipedia.jac
jac-mtllm/examples/vision/: math_solver.jac  mugen.jac  personality_finder.jac  receipt_analyzer.jac
jac-mtllm/mtllm/: __init__.py  aott.py  plugin.py  semtable.py  types.py  utils.py
jac-mtllm/mtllm/llms/: __init__.py  base.py  gemini.py  google.py  huggingface.py  ollama.py  openai.py  togetherai.py
jac-mtllm/mtllm/tools/: __init__.py  serper.py  wikipedia_utils.py
jac-mtllm/scripts/: gh_release.py
jac-mtllm/support/dataset_generation/: .gitignore  chat_template.txt  llm_synthetic_gen.py  output_template.txt  program.jac  program_random.jac
jac-mtllm/support/finetune_llm/: .gitignore  config.yaml  train.py
jac-mtllm/tests/fixtures/: with_llm_function.jac  with_llm_image.jac  with_llm_lower.jac  with_llm_method.jac  with_llm_type.jac  with_llm_video.jac
jac-splice-orc/: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  ReadMe.md  pyproject.toml  requirements.txt  setup.py  test.jac  test.py
jac-splice-orc/_v1/: requirements.txt
jac-splice-orc/docker/: Dockerfile
jac-splice-orc/grpc_local/: module_service_pb2.py  module_service_pb2_grpc.py
jac-splice-orc/jac_splice_orc/: Dockerfile  main.py  runner.py
jac-splice-orc/jac_splice_orc/config/: config.json  config_loader.py
jac-splice-orc/jac_splice_orc/dtos/: __init__.py  deployment.py
jac-splice-orc/jac_splice_orc/examples/: numpy_test.jac  transformer_test.jac
jac-splice-orc/jac_splice_orc/managers/: deploy.py  pod_manager.py  pod_manager_deployment.yml  proxy_manager.py
jac-splice-orc/jac_splice_orc/manifests/: __init__.py  jac-orc-cluster-wide.yaml  jac-orc.yaml
jac-splice-orc/jac_splice_orc/plugin/: splice_plugin.py
jac-splice-orc/jac_splice_orc/proxy/: README.md  __init__.py  main.py
jac-splice-orc/jac_splice_orc/routers/: __init__.py  deployment.py
jac-splice-orc/jac_splice_orc/server/: server.py
jac-splice-orc/k8s/: pod_manager_deployment.yml
jac-splice-orc/managers/: dockerfile  namespace.yaml  pod_manager.py  pod_manager_deployment.yml  proxy_manager.py
jac-splice-orc/plugin/: splice_plugin.py
jac-splice-orc/server/: server.py
jac-splice-orc/test/: test_pod_manager.py
jac-splice-orc/utils/: startup.sh
jac/.github/: CODE_OF_CONDUCT.md  pull_request_template.md
jac/docs/: type_checking_architecture_proposal.md  type_checking_implementation_plan.md
jac/env/: pyvenv.cfg
jac/examples/: simple.jac
jac/jac_project/: main.jac
jac/jaclang/: __init__.py  lib.py  settings.py
jac/jaclang/cli/: cli.md  (+4 more)
jac/scripts/: check.sh  clean_jac_gen.sh  codebase_visualizer.py  codebase_visualizer_setup.sh  performance.py  pypi_push.sh  quick_unzip.py  vendor.sh
jac/tests/: simple_type_binding_test.py  standalone_type_checker_test.py  standalone_type_system_test.py  test_type_binding.py  test_type_checker.py  type_binding_test.jac  type_binding_test.py
neojac/: .pre-commit-config.yaml  check.sh  pyproject.toml
neojac/neojac/: jac.py  larkparse.py  larkparse.sh  neojac.lark
(+8045 files in other folders)
