[tool.poetry]
name = "jaclang-jaseci"
version = "0.1.0"
description = "jaclang-jaseci is the full stack framework for programs written in jaclang"
authors = ["Jason Mars <jason@jaseci.org>", "Yiping Kang <yiping@jaseci.org>", "Alexie Madolid"]
license = "MIT"
readme = "README.md"
keywords = [
    "jac",
    "jaclang",
    "jaseci",
    "python",
    "programming-language",
    "machine-learning",
    "artificial-intelligence",
]
repository = "https://github.com/Jaseci-Labs/jaclang-jaseci"
homepage = "https://jaseci.org"
documentation = "https://jac-lang.org"

[tool.poetry.dependencies]
python = "^3.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-xdist = "^3.6.1"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"