[tool.poetry]
name = "jac-cloud"
version = "0.1.20"
description = ""
authors = ["Jason Mars <jason@jaseci.org>"]
readme = "README.md"
packages = [{include = "jac_cloud"}]

[tool.poetry.dependencies]
python = "^3.12.0"
jaclang = "0.7.34"
fastapi = "0.115.11"
orjson = "3.10.15"
uvicorn = {version = "0.34.0", extras = ["standard"]}
gunicorn = "23.0.0"
asyncer = "0.0.8"
pydantic = "2.10.6"
pydantic-settings = "2.8.1"
email-validator = "2.2.0"
python-multipart = "0.0.20"
pymongo = "4.11.3"
motor = "3.7.0"
montydb = "2.5.3"
redis = "5.0.3"
fakeredis = "2.27.0"
broadcaster = {version = "0.3.1", extras = ["redis"]}
pyjwt = {version = "2.10.1", extras = ["crypto"]}
passlib = "1.7.4"
sendgrid = "6.11.0"
httpx = "0.28.1"
fastapi-sso = "0.17.0"
google-auth = "2.38.0"
ecs-logging = "2.2.0"
apscheduler = "3.11.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "1.0.1"
black = "25.1.0"
pre-commit = "4.1.0"
pytest = "8.3.5"
flake8 = "7.1.2"
flake8-import-order = "0.18.2"
flake8-docstrings = "1.7.0"
flake8-comprehensions = "3.16.0"
flake8-bugbear = "24.12.12"
flake8-annotations = "3.1.1"
flake8_simplify = "0.21.0"
pep8-naming = "0.14.1"
mypy = "1.15.0"
types-PyYAML = "6.0.12.20241230"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."jac"]
jac = "jac_cloud.plugin.cli:JacCmd"
serve = "jac_cloud.plugin.jaseci:JacPlugin"

[tool.poetry.scripts]
standalone = "jac_cloud.runner:run"