[tool.poetry]
name = "mtllm"
version = "0.3.4"
description = "MTLLM Provides Easy to use APIs for different LLM Providers to be used with Jaseci's Jaclang Programming Language."
authors = ["Jason Mars <jason@jaseci.org>"]
maintainers = ["Jason Mars <jason@jaseci.org>"]
license = "MIT"
readme = "README.md"
keywords = ["llm", "jaclang", "jaseci", "mtllm"]

[tool.poetry.dependencies]
jaclang = "~0.7.25"
loguru = "~0.7.2"
openai = { version = "~1.30.4", optional = true }
anthropic = { version = "~0.26.1", optional = true }
ollama = { version = "~0.2.0", optional = true }
together = { version = "~1.2.0", optional = true }
transformers = { version = "~4.41.1", optional = true }
groq = { version = "~0.8.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[tool.poetry.extras]
tools = ["wikipedia"]
video = ["opencv-python-headless"]
image = ["pillow"]
groq = ["groq"]
transformers = ["transformers"]
ollama = ["ollama"]
anthropic = ["anthropic"]
openai = ["openai"]
together = ["together"]

[tool.poetry.plugins."jac"]
mtllm = "mtllm.plugin:JacFeature"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
